[package]
name = "clockey"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.25"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next" }
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.135"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "bigdecimal",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[profile.dev]
panic = "abort"
debug-assertions = true
